wxc/include/ewxw/wxc_glue.h



/* wxSlider */
TClassDefExtend(wxSlider,wxControl)
void       wxSlider_ClearSel( TSelf(wxSlider) _obj );

void       wxSlider_ClearTicks( TSelf(wxSlider) _obj );

TClass(wxSlider) wxSlider_Create( TClass(wxWindow) _prt, int _id, int _init, int _min, int _max, TRect(_lft,_top,_wdt,_hgt), long _stl );

int        wxSlider_GetLineSize( TSelf(wxSlider) _obj );

int        wxSlider_GetMax( TSelf(wxSlider) _obj );

int        wxSlider_GetMin( TSelf(wxSlider) _obj );

int        wxSlider_GetPageSize( TSelf(wxSlider) _obj );

int        wxSlider_GetSelEnd( TSelf(wxSlider) _obj );

int        wxSlider_GetSelStart( TSelf(wxSlider) _obj );

int        wxSlider_GetThumbLength( TSelf(wxSlider) _obj );

int        wxSlider_GetTickFreq( TSelf(wxSlider) _obj );

int        wxSlider_GetValue( TSelf(wxSlider) _obj );

void       wxSlider_SetLineSize( TSelf(wxSlider) _obj, int lineSize );

void       wxSlider_SetPageSize( TSelf(wxSlider) _obj, int pageSize );

void       wxSlider_SetRange( TSelf(wxSlider) _obj, int minValue, int maxValue );

void       wxSlider_SetSelection( TSelf(wxSlider) _obj, int minPos, int maxPos );

void       wxSlider_SetThumbLength( TSelf(wxSlider) _obj, int len );

void       wxSlider_SetTick( TSelf(wxSlider) _obj, int tickPos );

void       wxSlider_SetTickFreq( TSelf(wxSlider) _obj, int n, int pos );

void       wxSlider_SetValue( TSelf(wxSlider) _obj, int value );